--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 
 <!-- header -->
+<!-- 
 <div class="ui fixed fitted top five item menu borderless">
 	<div class="ui container">
 		<a class="item" href="/"><i class="home icon"></i>Home</a>
@@ -39,23 +40,16 @@
 		<a class="item" href="./Xiang Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>
 	</div>
 </div>
-	
-<!-- home -->
+-->	
+
+
 <div class="ui main text container">
     <br>
 	<br>
     <div class="header huge ui"><strong>Yuchong Gong</strong></div>	
 	<div class="ui section divider"></div>
    
-    <div class="ui fixed fitted top five item menu borderless">
-    	<div class="ui container">
-			<a class="item" href="/"><i class="home icon"></i>Home</a>
-			<a class="item" href="./publication"><i class="file text icon"></i>Publication</a>
-			<a class="item" href="./talk"><i class="bell icon"></i>Talk</a>
-			<a class="item" href="./misc"><i class="trophy icon"></i>Misc.</a>
-			<a class="item" href="./Xiang Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>
-    	</div>
-	</div>
+
     <!-- <div class="ui top attached">-->
 	
 	
@@ -70,7 +64,7 @@
 					    <br>
                         <p>Graduate student, Wuhan University,  Wuhan,   China </p>
                         <p><i class="mail icon"></i>Email: gongyuchong@whu.edu.cn </p>
-                        <p><i class="home icon"></i>Group: <a href="http://www.bioinfotech.cn/" target="_blank">Honored to be part of the wonderful team!</a></p>
+                        <p><i class="home icon"></i>Group: BioMedical Big Data Mining Lab</a></p>
                     </div>
 					<br>
                     <!--
@@ -149,12 +143,7 @@
             </div>
 			
 			<div class="ui section divider"></div>
-            <p>Last Updated: 07/2019</p>
-			<br>
-			<br>
-			<div class="content" id="visit-map">
-                <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=YG4fd7cKyrWe5QsX9iygEQ2x0a4jIRTeWb-qYyJ0xsI&cl=ffffff&w=a"></script>
-            </div>
+            
             </div>
   </div>
 </div>
