--- a/index.html
+++ b/index.html
@@ -30,17 +30,15 @@
 
 
 <!-- header -->
-<!-- 
-<div class="ui fixed fitted top five item menu borderless">
+
+<div class="ui fixed fitted top four item menu borderless">
 	<div class="ui container">
 		<a class="item" href="/"><i class="home icon"></i>Home</a>
-		<a class="item" href="./publication"><i class="file text icon"></i>Publication</a>
-		<a class="item" href="./talk"><i class="bell icon"></i>Talk</a>
-		<a class="item" href="./misc"><i class="trophy icon"></i>Misc.</a>
-		<a class="item" href="./Xiang Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>
+		<a class="item" href="/"><i class="book text icon"></i>Research</a>
+		<a class="item" href="/"><i class="heart icon"></i>Life</a>
+		<a class="item" href="/"><i class="leaf icon"></i>Others</a>
 	</div>
 </div>
--->	
 
 
 <div class="ui main text container">
