--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <h3>Technical skills </h3>
               <table width="421" border="0">
                 <tr>
-                  <td width="222"><p align="center"><strong>Computerl  Languages </strong></p>                    </td>
+                  <td width="222"><p align="center"><strong>Computer  Languages </strong></p>                    </td>
                   <td width="189"><p align="center">python, java, C, C++ </p>                  </td>
                 </tr>
                 <tr>
